tests/ui/associated-type-bounds/return-type-notation/path-higher-ranked.stderr
error[E0212]: cannot use the associated function of a trait with uninferred generic parameters
  --> $DIR/path-higher-ranked.rs:11:5
   |
LL |     T::method(..): Send,
   |     ^^^^^^^^^^^^^
   |
help: use a fully qualified path with inferred lifetimes
   |
LL -     T::method(..): Send,
LL +     <T as A<'_>>::method(..): Send,
   |

error[E0212]: cannot use the associated function of a trait with uninferred generic parameters
  --> $DIR/path-higher-ranked.rs:19:5
   |
LL |     T::method(..): Send,
   |     ^^^^^^^^^^^^^
   |
help: use a fully qualified path with inferred lifetimes
   |
LL -     T::method(..): Send,
LL +     <T as A<'_>>::method(..): Send,
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0212`.
